[package]
name = "bug-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.new-crypto]
version = "0.3"
package = "shadowsocks-crypto"
features = ["v1-stream"]

[dependencies.old-crypto]
version = "0.2"
package = "shadowsocks-crypto"
features = ["v1-stream"]
